Safety commit, got 3rd level expandable view working, changing to fit what we want now

--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -6,6 +6,7 @@
     tools:context=".Tab1">
 
     <ExpandableListView
+        android:background="#000000"
         android:id="@+id/lvExp"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
