--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -20,11 +20,40 @@
         <item name="skull_crushers">Skull crushers</item>
         <item name="dips">Dips</item>
     </string-array>
+    
+    
+    <string-array name="Arms_Intermediate">
+        <item>@string/bicep_curl</item>
+        <item>@string/forearm_curl</item>
+    </string-array>
 
     <string-array name="legs">
         <item name="squat">Squat</item>
         <item name="deadlift">Deadlift</item>
         <item name="calf_raise">Calf raise</item>
+    </string-array>
+
+
+    <string-array name="items_array_expandable_level_one">
+        <item>Level 1.1</item>
+        <item>Level 1.2</item>
+        <item>Level 1.3</item>
+    </string-array>
+    <string-array name="items_array_expandable_level_one_one_child">
+        <item>Level 1.1.1</item>
+        <item>Level 1.1.2</item>
+    </string-array>
+    <string-array name="items_array_expandable_level_one_two_child">
+        <item>Level 1.2.1</item>
+    </string-array>
+    <string-array name="items_array_expandable_other_child">
+        <item>Second Level 01</item>
+        <item>Second Level 02</item>
+        <item>Second Level 03</item>
+    </string-array>
+    <string-array name="items_array_expandable_level_three">
+        <item>Child Level 01</item>
+        <item>Child Level 02</item>
     </string-array>
 
 
