--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -33,24 +33,94 @@
         <item name="calf_raise">Calf raise</item>
     </string-array>
 
-
     <string-array name="items_array_expandable_level_one">
-        <item>Level 1.1</item>
-        <item>Level 1.2</item>
-        <item>Level 1.3</item>
+        <item name="group_arm">Arm</item>
+        <item name="group_legs">Legs</item>
+        <item name="group_back">Back</item>
+        <item name="group_shoulder">Shoulders</item>
+        <item name="group_core">Core</item>
+        <item name="group_chest">Chest</item>
     </string-array>
-    <string-array name="items_array_expandable_level_one_one_child">
-        <item>Level 1.1.1</item>
-        <item>Level 1.1.2</item>
+
+    <string-array name="Arm_Beginner">
+        <item>B1</item>
+        <item>B2</item>
     </string-array>
-    <string-array name="items_array_expandable_level_one_two_child">
-        <item>Level 1.2.1</item>
+    <string-array name="Arm_Intermediate">
+        <item>B3</item>
     </string-array>
+
+    <string-array name="Arm_Advanced">
+        <item>B4</item>
+    </string-array>
+
+
+    <string-array name="Back_Beginner">
+        <item>B1</item>
+        <item>B2</item>
+    </string-array>
+    <string-array name="Back_Intermediate">
+        <item>B3</item>
+    </string-array>
+
+    <string-array name="Back_Advanced">
+        <item>B4</item>
+    </string-array>
+
+    <string-array name="Legs_Beginner">
+        <item>B1</item>
+        <item>B2</item>
+    </string-array>
+    <string-array name="Legs_Intermediate">
+        <item>B3</item>
+    </string-array>
+
+    <string-array name="Legs_Advanced">
+        <item>B4</item>
+    </string-array>
+
+    <string-array name="Shoulders_Beginner">
+        <item>B1</item>
+        <item>B2</item>
+    </string-array>
+    <string-array name="Shoulders_Intermediate">
+        <item>B3</item>
+    </string-array>
+
+    <string-array name="Shoulders_Advanced">
+        <item>B4</item>
+    </string-array>
+
+    <string-array name="Core_Beginner">
+        <item>B1</item>
+        <item>B2</item>
+    </string-array>
+    <string-array name="Core_Intermediate">
+        <item>B3</item>
+    </string-array>
+
+    <string-array name="Core_Advanced">
+        <item>B4</item>
+    </string-array>
+
+    <string-array name="Chest_Beginner">
+        <item>B1</item>
+        <item>B2</item>
+    </string-array>
+    <string-array name="Chest_Intermediate">
+        <item>B3</item>
+    </string-array>
+
+    <string-array name="Chest_Advanced">
+        <item>B4</item>
+    </string-array>
+
     <string-array name="items_array_expandable_other_child">
-        <item>Second Level 01</item>
-        <item>Second Level 02</item>
-        <item>Second Level 03</item>
+        <item>Beginner</item>
+        <item>Intermediate</item>
+        <item>Advanced</item>
     </string-array>
+
     <string-array name="items_array_expandable_level_three">
         <item>Child Level 01</item>
         <item>Child Level 02</item>
