--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,15 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="55dip"
-    android:orientation="vertical" >
+    android:gravity="start"
+    android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/lblListItem"
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="17dip"
+        android:textSize="17sp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
+        android:layout_weight="1"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+
+    <CheckBox
+        android:id="@+id/toggleButtonSelected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:checked="false"
+        android:layout_alignParentRight="true"
+        />
 
 </LinearLayout>
