--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:context=".Tab1">
 
     <ExpandableListView
         android:id="@+id/lvExp"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"/>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/saveButton"
+        android:text="Save exercises?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
