--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:text=""
         android:checked="false"
+        android:focusable="true"
         android:layout_alignParentRight="true"
         />
 
