--- a/app/src/main/res/layout/activity_exercise_description.xml
+++ b/app/src/main/res/layout/activity_exercise_description.xml
@@ -8,8 +8,16 @@
 
     <WebView
         android:id="@+id/WebView01"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></WebView>
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"></WebView>
+
+    <TextView
+        android:id="@+id/desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/WebView01"
+        tools:layout_editor_absoluteX="125dp" />
 
 
 </android.support.constraint.ConstraintLayout>
