--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -6,11 +6,10 @@ android:layout_height="match_parent"
 tools:context=".Tab3">
 
 <!-- TODO: Update blank fragment layout -->
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Tab 3"
-    android:layout_centerInParent="true"
-    android:textSize="30dp"/>
+    <ListView
+        android:id="@+id/ListView01"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        />
 
 </RelativeLayout>
