--- a/app/src/main/res/layout/activity_youtube_player_video.xml
+++ b/app/src/main/res/layout/activity_youtube_player_video.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".YoutubePlayerVideo">
@@ -10,17 +10,24 @@
     <TextView
         android:id="@+id/exercisePageLabel"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="30dp"/>
 
     <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/youtube_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/exercisePageLabel"
+        android:layout_centerInParent="true"/>
 
     <TextView
         android:id="@+id/exercisePageDescription"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/youtube_view"
+        android:layout_centerInParent="true"
+        android:textSize="20dp"/>
 
-</LinearLayout>
+</RelativeLayout>
 
