--- a/app/src/main/res/layout/tab2_list_item.xml
+++ b/app/src/main/res/layout/tab2_list_item.xml
@@ -13,6 +13,7 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:layout_weight="1"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:textColor="#000000"/>
 
 </LinearLayout>
